manifests/n2app-backend/kubernetes/overlay/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  name: n2app
  namespace: n2app-backend
spec:
  tls:
    - hosts:
        - "n2app-api.pea.co.th"
